# TullipApp

./: DoxyFile  README.md  TulipApp.ui  TullipApp.cdproj  TullipApp.sln
CppDependOut/: CppDependAnalysisResult_TullipApp_2025Apr27_21h46.cdar  CppDependAnalysisResult_TullipApp_2025May04_05h04.cdar  CppDependReport.html  InfoWarnings.xml  deps.json
CppDependOut/Incremental/: model.json
CppDependOut/TrendMetrics/: CppDependTrendData2025.xml
Documemtation/html/: doxygen_crawl.html  index.html  navtreeindex0.js  pages.html
TullipApp/: Attendance.cpp  Attendance.h  Attendance.ui  CMakeLists.txt  ChildCheckBox.cpp  ChildCheckBox.h  ChildCheckBox.ui  ChildDialog.cpp  ChildDialog.h  ChildDialog.ui  ChildEntry.cpp  ChildEntry.h  ChildEntry.ui  ChildLabel.cpp  ChildLabel.h  ChildLabel.ui  DataBase.cpp  DataBase.h  DataBaseGUI.cpp  DataBaseGUI.h  DataBaseGUI.ui  DataBase_Parser_Functions.cpp  DataBase_Parser_Functions.h  Data_Helper_Types.cpp  Data_Helper_Types.h  DateTime.cpp  DateTime.h  DateTime_Exceptions.cpp  DateTime_Exceptions.h  EmployeeDialog.cpp  EmployeeDialog.h  EmployeeDialog.ui  EmployeeEntry.cpp  EmployeeEntry.h  EmployeeEntry.ui  Helper_Functions.cpp  Helper_Functions.h  Lesson.cpp  Lesson.h  LessonDialog.cpp  (+35 more)
docs/html/: _child_check_box_8cpp.html  _child_check_box_8cpp__incl.map  _child_check_box_8cpp__incl.md5  _child_check_box_8h.html  _child_check_box_8h.js  _child_check_box_8h__dep__incl.map  _child_check_box_8h__dep__incl.md5  _child_check_box_8h__incl.map  _child_check_box_8h__incl.md5  _child_check_box_8h_source.html  _child_dialog_8cpp.html  (+2025 more)
(+170 files in other folders)
